<resources>
    <string name="app_name">博客园</string>
    <string name="tab_home">首页</string>
    <string name="tab_news">新闻</string>
    <string name="tab_sns">动态</string>
    <string name="tab_library">知识库</string>
    <string name="tab_discover">发现</string>
    <string name="tab_mine">我</string>
    <string name="more">更多</string>
    <string name="edit_comment">发表伟大的言论…</string>
    <string name="wechat_sns">微信朋友圈</string>
    <string name="qq">QQ</string>
    <string name="wechat">微信好友</string>
    <string name="qzone">QQ空间</string>
    <string name="sina">新浪微博</string>
    <string name="view_source">查看原文</string>
    <string name="copy_link">复制链接</string>
    <string name="my_favorites">我的收藏</string>
    <string name="history">浏览记录</string>
    <string name="cancel">取消</string>
    <string name="tips_loading">正在加载…</string>
    <string name="copy_link_success">复制链接成功</string>
    <string name="open_browser">浏览器打开</string>
    <string name="copyright">Copyright © 2004–2018 cnblogs.com All Rights Reserved</string>
    <string name="loading">正在加载…</string>
    <string name="signing">正在登录…</string>
    <string name="loading_web_user_info">请稍等片刻</string>
    <string name="loading_user_info">「%s」遇见你真好</string>
    <string name="loading_blog_app">每一步的改变都不平凡</string>
    <string name="loading_user_info_finish">技术改变世界</string>
    <string name="login_retry_error">多次登录失败？试试官方网页登录吧！</string>
    <string name="login_retry">正在重试，请稍等片刻。</string>
    <string name="login_retry_tips">等待太久了？重新试试吧</string>
    <string name="login_retry_route_tips">还是登录不上？试试重新登录吧</string>
    <string name="login_verify_code_error">登录需要校验验证码，请前往官方网页登录。</string>
    <string name="empty_message">这里什么都没有</string>
    <string name="retry">重新加载</string>
    <string name="empty_comment">还没有评论 快来说两句</string>
    <string name="nomore_loading"> ——阅读完毕——</string>
    <string name="no_more_tips">全部加载完毕</string>
    <string name="register">注册</string>
    <string name="login_tips">登录遇到问题？</string>
    <string name="login_contract">博客园APP隐私说明</string>
    <string name="login_contract_content">博客园APP已经开源，登录过程我们会收集您遇到的错误信息以及您的博客名称，但我们不会收集您的帐号密码信息，请放心登录。\n\n您在登录过程如有任何问题请前往设置-帮助中心查找原因，或者联系博客园官方团队contact@cnblogs.com。</string>
    <string name="login_user_name_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login">官网登录</string>
    <string name="go_login">去登录</string>
    <string name="login_success">登录成功</string>
    <string name="error_username_empty">请输入用户名</string>
    <string name="error_password_empty">请输入密码</string>
    <string name="no_more_comment">已显示全部评论</string>
    <string name="edit_comment_hint">我来说两句..</string>
    <string name="reference_comment">引用评论</string>
    <string name="send">发送</string>
    <string name="i_try_agin">我再试试</string>
    <string name="go_web_login">去网页版登录</string>
    <string name="delete_comment">删除评论</string>
    <string name="delete_favorites">删除收藏</string>
    <string name="setting">更多设置</string>
    <string name="logout">退出登录</string>
    <string name="following">关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="feed">动态</string>
    <string name="blog">博客</string>
    <string name="title_fans">%s的粉丝</string>
    <string name="title_follow">%s的关注</string>
    <string name="not_login">登录，做一名有态度的人</string>
    <string name="me">我</string>
    <string name="tips_blogger_follow_not_info">请等待博主信息加载完毕后再操作。</string>
    <string name="new_version_title">发现新版本</string>
    <string name="login_expired">登录过期，请重新登录</string>
    <string name="blogger_need_login">请先登录</string>
    <string name="please_login">请登录</string>
    <string name="github_issue_url">http://www.raeblog.com/cnblogs/issues</string>
    <string name="github_url">https://github.com/raee/android-cnblogs</string>
    <string name="delete">删除</string>
    <string name="deleting">正在删除..</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="title_category">分类</string>
    <string name="i_get_it">我知道了</string>
    <string name="dialog_tips_post_comment">您伟大的讲话发表成功\n由于缓存更新较慢，请稍候再到评论区查看您已经发布的评论。\n您发表的评论长按可以进行删除。</string>
    <string name="dialog_tips_post_like">点赞成功，由于缓存问题，点赞数量更新较慢。</string>
    <string name="tips_comment_success">发表评论成功</string>
    <string name="github">开源项目</string>
    <string name="agree">我同意</string>
    <string name="tips_logout">是否真的退出登录？</string>
    <string name="update_now">立即更新</string>
    <string name="cancel_bookmarks_title">收藏接口限制</string>
    <string name="go_now">立即前往</string>
    <string name="cnblogs_cookie_url">http://cnblogs.com</string>
    <string name="clear_cache">清除缓存</string>
    <string name="share_app">推荐分享</string>
    <string name="praises">给个好评</string>
    <string name="praises_error">您似乎没有安装应用市场</string>
    <string name="share_app_url">http://www.raeblog.com/cnblogs/index.php/app/share</string>
    <string name="share_app_title">推荐一个好应用「博客园」给你</string>
    <string name="share_app_desc">听说大牛都在用的博客园APP，一个面向开发者的知识分享社区，一个纯净的技术交流社区。</string>
    <string name="market_url">market://details?id=com.rae.cnblogs</string>
    <string name="service_name">博客园离线服务</string>
    <string name="permission_tips_message">博客园需要读取/写入您的存储卡，禁止后部分功能受到限制，是否再次开启？</string>
    <string name="permission_granted">同意申请权限</string>
    <string name="feedback">意见反馈</string>
    <string name="view_now">立即查看</string>
    <string name="feedback_hint">请填写反馈信息</string>
    <string name="permission_request_message">博客园准备申请读取/写入您的内存卡权限，用于博客缓存以及图片缓存。</string>
    <string name="allow">允许</string>
    <string name="title_request_permissions">权限申请</string>
    <string name="forget_password">忘记密码？</string>
    <string name="forget_password_url">https://passport.cnblogs.com/GetMyPassword.aspx</string>
    <string name="reg_url">https://account.cnblogs.com</string>
    <string name="search">搜索</string>
    <string name="open_source">开源许可</string>
    <string name="night_mode">夜间模式</string>
    <string name="day_mode">日间模式</string>
    <string name="check_update">检查更新</string>
    <string name="help_center">帮助中心</string>
    <string name="url_help_center">http://www.raeblog.com/cnblogs/help.html</string>
    <string name="url_license">http://www.raeblog.com/cnblogs/license.html</string>
    <string name="system_message">系统消息</string>
    <string name="url_signin">https://passport.cnblogs.com/user/signin</string>
    <string name="login_help_message">您可以点击立即前往查看相关的问题以及原因，或者截图向我们进行意见反馈。</string>
    <string name="url_login_help">http://www.raeblog.com/cnblogs/loginHelp.html</string>
    <string name="url_blog_apply">https://passport.cnblogs.com/BlogApply.aspx</string>
    <string name="font_setting">字体设置</string>
    <string name="font_setting_poetry">月落乌啼霜满天\n江枫渔火对愁眠\n姑苏城外寒山寺\n夜半钟声到客船</string>
    <string name="label_comment">评论</string>
    <string name="beta_version">内测版本</string>
    <string name="url_beta_version">https://fir.im/cnblogsbeta</string>
    <string name="tab_recommend">推荐</string>
    <string name="tab_follow">关注</string>
    <string name="post">发布</string>
    <string name="label_image_selection">所有照片</string>
    <string name="button_text_image_post">确定(%1$d/%2$d)</string>
    <string name="button_text_image_post_default">确定</string>
    <string name="label_post_moment">发布动态</string>
    <string name="label_moment_detail">闪存详情</string>
    <string name="tips_post_moment_success">闪存发布成功！</string>
    <string name="tips_post_moment_progress">为了节省您的时间，已进入后台发送，结果请稍后留意通知。</string>
    <string name="tips_post_moment_progress_simple">已进入后台发布，请稍候留意通知。</string>
    <string name="tips_del_moment_success">删除成功</string>
    <string name="edit_moment_comment">吃瓜群众有话说</string>
    <string name="label_moment_message">消息</string>
    <string name="tab_sns_mine">我的</string>
    <string name="unlogin_hint">登录，发现更大的世界</string>
    <string name="label_moment_at_me">提到我的消息</string>
    <string name="title">标题</string>
    <string name="tips_post_moment_image">开通博客后才能发图片，还没开通？</string>
    <string name="tips_post_moment_apply">开通博客后才能发图片，您似乎还没有开通，如果已经开通请继续。</string>
    <string name="blog_apply">立即申请</string>
    <string name="moment_unlogin_hint">登录后，更多评论等你来发现。</string>
    <string name="title_comment">全部评论（%s）</string>
    <string name="search_hint">搜索博客/博主/新闻/知识库</string>
    <string name="about_me">关于我们</string>
</resources>
