<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <LinearLayout
        android:id="@+id/ll_placeholder_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_placeholder_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_placeholder"/>

        <TextView
            android:id="@+id/tv_placeholder_empty_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/empty_message"
            android:textColor="@color/ph1"
            android:textSize="@dimen/h3"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btn_placeholder_retry"
            style="@style/AppButton"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_default"
            android:text="@string/retry"
            android:textColor="#999999"
            android:textSize="15sp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_placeholder_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:indeterminateDrawable="@drawable/progress_bar_loading"
            android:indeterminateDuration="600"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/loading"
            android:textColor="@color/ph2"
            android:textSize="12sp"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>