<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="36dp"
    android:paddingRight="36dp"
    android:paddingTop="@dimen/default_padding_top">

    <!--头部-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingBottom="18dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="18dp"
            android:scaleType="center"
            android:src="@drawable/login_btn_close"/>

        <!--   <TextView

               android:layout_alignParentRight="true"
               android:layout_centerVertical="true"
               android:id="@+id/tv_register"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:padding="12dp"
               android:text="@string/register"
               android:textColor="@color/ph4"
               android:textSize="12sp"/>-->

    </RelativeLayout>


    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="46dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_login_logo"/>

    <LinearLayout
        android:id="@+id/ll_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">


            <EditText
                android:id="@+id/et_login_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/public_divider_while_primary"
                android:hint="@string/login_user_name_hint"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/ph1"
                android:textColorHint="@color/ph4"
                android:textSize="@dimen/h2"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/public_divider_while_primary"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingRight="68dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/ph1"
                    android:textColorHint="@color/ph4"
                    android:textSize="@dimen/h2"/>

                <ImageView
                    android:id="@+id/img_edit_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="6dp"
                    android:layout_toLeftOf="@+id/cb_eyes"
                    android:src="@drawable/ic_edit_delete"
                    android:visibility="gone"/>

                <CheckBox
                    android:id="@+id/cb_eyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/ic_eyes"
                    android:paddingRight="6dp"/>

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_button_height"
            android:layout_marginTop="40dp"
            android:background="@drawable/public_button_login"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/text_color_login_button"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="注册账号"
                android:layout_alignParentLeft="true"
                android:textColor="@color/ph4"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/forget_password"
                android:textColor="@color/ph4"
                android:textSize="12sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/ll_login_contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_tips"
                android:textColor="@color/ph4"
                android:textSize="12sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_login_contract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="36dp"
                android:paddingTop="12dp"
                android:text="@string/login_contract"
                android:textColor="@color/ph4"
                android:textSize="10sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>